--- a/components/Snackbar/styles/styles.less
+++ b/components/Snackbar/styles/styles.less
@@ -3,11 +3,32 @@
 
 .mdc-snackbar {
 
-  z-index: 2000;
+	z-index: 2001;
+	position: initial;
+	margin-top: 5px;
 
-  &.open{
+	&.open{
 
-    transform: translate(-50%,0%);
-  }
+		transform: translate(-50%,0%);
+	}
+
+	&.mdc-snackbar--active{
+
+		transform: initial;
+	}
+
+	.mdc-snackbar__action-wrapper{
+		margin-right: -24px;
+	    display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+
+	.mdc-snackbar__text{
+		height: auto;
+		min-height: 48px;
+		padding-top: 5px;
+    	padding-bottom: 5px;
+	}
 }
 
